--- a/WebApi/appsettings.Development.json
+++ b/WebApi/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "BookingFieldDatabase": "Server=SE140692;Database=BookingFieldDatabase;uid=sa;pwd=123;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    "BookingFieldDatabase": "Server=SE140695\\SQLEXPRESS;Database=BookingFieldDatabase;uid=sa;pwd=123;Trusted_Connection=True;MultipleActiveResultSets=true;"
   }
 }
