--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Tokens": {
+    "Key": "123456789ABCDEFGH",
+    "Issuer": "https://bachduyhoang.com"
+  }
 }
