--- a/WebApi/appsettings.Development.json
+++ b/WebApi/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "BookingFieldDatabase": "Server=SE140695\\SQLEXPRESS;Database=BookingFieldDatabase;uid=sa;pwd=123;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    "BookingFieldDatabase": "Data Source=database-1.cqeje9qyfeyk.ap-southeast-1.rds.amazonaws.com,1433; Initial Catalog=my-database; User Id=admin; Password=admin123456;Trusted_Connection=False;MultipleActiveResultSets=true;"
   }
 }
