--- a/WebApi.Data/appsettings.json
+++ b/WebApi.Data/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "BookingFieldDatabase": "Server=SE140695\\SQLEXPRESS;Database=BookingFieldDatabase;uid=sa;pwd=123;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    "BookingFieldDatabase": "Server=database-1.cqeje9qyfeyk.ap-southeast-1.rds.amazonaws.com;Database=my-database;uid=admin;pwd=admin123456;Trusted_Connection=False;MultipleActiveResultSets=true;"
   }
 }
