--- a/WebApi.Bussiness/WebApi.Bussiness.csproj
+++ b/WebApi.Bussiness/WebApi.Bussiness.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile></DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
 	<FrameworkReference Include="Microsoft.AspNetCore.App" />
     <ProjectReference Include="..\Utilities\Utilities.csproj" />
